--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html class="min-h-full" lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue 3 + TypeScript + Tailwind Starter Template</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-    <noscript>
-      <h1>Opinionated, production ready template for Vite and Vue 3</h1>
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/Vector.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Aviata</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body class="bg-[#E1E1E1]">
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+<noscript>
+    <h1>Opinionated, production ready template for Vite and Vue 3</h1>
 
-      <p>This site requires JavaScript to work.</p>
-    </noscript>
-  </body>
+    <p>This site requires JavaScript to work.</p>
+</noscript>
+</body>
 </html>
